<resources>
    <string name="app_name">proyectoapp</string>
    <string name="home">Cuenta</string>
    <string name="notificar_HHEE">Notificar Horas Extras</string>
    <string name="perfilar_usuario">Perfilar Usuario</string>
    <string name="asignar_turnos">Asignar Turnos</string>
    <string name="agregar_contrato">Agregar Contrato</string>
    <string name="registro_de_conexiones">Registro de conexiones</string>
    <string name="reporte_digitaci_n">Reporte Digitación</string>
    <string name="pedidos">Pedidos</string>
    <string name="digitalizar_pedidos">Digitalizar Pedidos</string>
    <string name="ingresar_boleta">Ingresar Boleta</string>
    <string name="reporte_digitalizaci_n">Reporte Digitalización</string>
    <string name="exportar_pedido">Exportar Pedido</string>
    <string name="digitar_pedido_titulo">Digitar pedido</string>
    <string name="title_activity_registro_conexiones">registro_conexiones</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_ingresar_boleta">ingresar_boleta</string>
    <string name="exportar_pedido_titulo">Exportar Pedido</string>
    <string name="mes">Mes</string>
    <string name="numero_contrato_texto">Número Contrato</string>
    <string name="generar">GENERAR</string>
    <string name="hintNumeroContrato">1234567890</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_boleta">Imagen boleta</string>
    <string name="elemento_a_digitar">Elemento a digitar</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="filtros_titulo">Filtros</string>
    <string name="registro_de_conexiones_titulo">Registro de Conexiones</string>
    <string name="reporte_digitacion_titulo">Reporte Mensual Digitación</string>
    <string name="cliente_titulo">Cliente</string>
    <string name="indicador_caducidad_titulo">Indicador Caducidad</string>
    <string name="estado_titulo">Estado</string>
    <string name="hint_cliente">111111111</string>
    <string name="no_hay_registros">No hay registros</string>
    <string name="registro_nuevo_ususario">Registro Nuevo Usuario</string>
    <string name="digitalizar_pedido">Digitalizar Pedido</string>
    <string name="perfilar_usuarios_titulo">Perfilar usuarios</string>
    <string name="digitar_pedidos_titulo">Digitar pedidos</string>



</resources>