<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/notificar"
        android:title="@string/notificar_HHEE"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_alarm_add_24_4"/>
    <item
        android:id="@+id/perfilar"
        android:title="@string/perfilar_usuario"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_supervisor_account_24_11"/>
    <item
        android:id="@+id/asignarTurnos"
        android:title="@string/asignar_turnos"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_local_police_24_5"/>
    <item
        android:id="@+id/nuevoContrato"
        android:title="@string/agregar_contrato"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_note_add_24_6"/>
    <item
        android:id="@+id/registroConexion"
        android:title="@string/registro_de_conexiones"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_polyline_24_20"/>
    <item
        android:id="@+id/reporteDigitacion"
        android:title="@string/reporte_digitaci_n"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_analytics_24_17"/>
    <item
        android:id="@+id/pedidosDigitar"
        android:title="@string/pedidos"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_type_specimen_24_13"/>
    <item
        android:id="@+id/pedidosDigitalizar"
        android:title="@string/digitalizar_pedidos"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_scanner_24_7"/>
    <item
        android:id="@+id/ingresarBoleta"
        android:title="@string/ingresar_boleta"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_post_add_24_8"/>
    <item
        android:id="@+id/reporteDigitalizacion"
        android:title="@string/reporte_digitalizaci_n"
        app:showAsAction="always"
        android:icon="@drawable/ic_assignment_9"/>
    <item
        android:id="@+id/exportar"
        android:title="@string/exportar_pedido"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_download_24_19"/>

</menu>