<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exportar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloExportarPedido"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/exportar_pedido_titulo"
                android:textAlignment="center"
                android:textAllCaps="false"
                app:autoSizeTextType="uniform" />

            <ScrollView
                android:id="@+id/scrollTbExportar"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/filtros_titulo">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/mesExportar"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical|end"
                            android:text="@string/mes"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toStartOf="@+id/seleccionarMesSpinner"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tituloDigitarPedido" />

                        <TextView
                            android:id="@+id/numContratoExportar"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical|end"
                            android:text="@string/numero_contrato_texto"
                            android:textIsSelectable="false"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/mesExportar" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/seleccionarMesSpinner"
                            android:layout_width="208dp"
                            android:layout_height="48dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="parent" />

                        <EditText
                            android:id="@+id/numContratoTxtExportar"
                            android:layout_width="207dp"
                            android:layout_height="48dp"
                            android:autofillHints="creditCardExpirationMonth"
                            android:ems="10"
                            android:hint="@string/hintNumeroContrato"
                            android:inputType="time"
                            android:textColorHint="#757575"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/numContratoExportar"
                            app:layout_constraintTop_toBottomOf="@+id/seleccionarMesSpinner" />

                        <Button
                            android:id="@+id/generarBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginBottom="16dp"
                            android:onClick="llenarTabla"
                            android:text="@string/generar"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/numContratoExportar" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:id="@+id/scrollExportar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/purple_200">

                        <TextView
                            android:id="@+id/titClienteExportar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Cliente" />

                        <TextView
                            android:id="@+id/titMesProcesoExportar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Mes" />

                        <TextView
                            android:id="@+id/titCaducidadExportar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Caducidad" />

                        <TextView
                            android:id="@+id/titEstadoExportar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Estado" />

                        <TextView
                            android:id="@+id/titAccionesExportar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Acciones" />


                    </TableRow>

                    <TableLayout
                        android:id="@+id/tbExportar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                    </TableLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:fabAnimationMode="slide"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:hideOnScroll="true"
        app:menu="@menu/bottom_menu" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>